Summary of important user-visible changes for releases of the octcdf package

===============================================================================
octcdf-1.1.6   Release Date: 2013-04-30   Release Manager: Alexander Barth
===============================================================================

 ** Improved matlab compatibility and bug fixes of ncread, ncinfo

===============================================================================
octcdf-1.1.5   Release Date: 2012-07-03   Release Manager: Alexander Barth
===============================================================================

 ** The following functions are new:
      ncread
      ncwrite
      ncinfo